--- a/src/app/pagina/pagina.component.html
+++ b/src/app/pagina/pagina.component.html
@@ -14,6 +14,7 @@
   <p>
     pagina works!
   </p>
+  <app-ticket>loading ...</app-ticket>
   <p>
     pagina works!
   </p>
@@ -29,14 +30,7 @@
   <p>
     pagina works!
   </p>
-  <p>
-    pagina works!
-  </p>
-  <p>
-    pagina works!
-  </p>
-  <p>
-    pagina works!
-  </p>
+
+  
 
 </div>
