--- a/src/app/menupersonas/menupersonas.component.html
+++ b/src/app/menupersonas/menupersonas.component.html
@@ -1,9 +1,11 @@
 <div class="visible-lg">
   <h1>menu desktop</h1>
 </div>
+
 <div class="hidden-lg">
   <div class="bloque-opacity"></div>
   <div class="menupersonas">
+    <!-- #region barra roja-->
     <div class="barraroja">
       <div class="container">
         <div class="row">
@@ -31,6 +33,12 @@
         </div>
       </div>
     </div>
+
+    <!-- #endregion -->
+
+
+    <!-- #region primer nivel menu-->
+
     <div class="contenido-menu">
       <a href="#" class="ir-izquierda" menu="servicios">
         <div class="boton-primer">
@@ -89,11 +97,11 @@
         </div>
       </a>
     </div>
+    <!-- #endregion -->
 
 
+    <!-- #region segundo nivel menu-->
 
-
-    
     <div class="segundo-nivel">
       <div class="segundo-menu servicios">
         <a href="#" class="regresar-derecha" menu="servicios">
@@ -110,12 +118,12 @@
             </div>
           </div>
         </a>
-        <a href="#" >
+        <a href="#" class="ir-tercero" menu="movil">
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
                 <div class="col-xs-2 izquierda">
-                  
+
                 </div>
                 <div class="col-xs-8 texto">
                   <span>Movil</span>
@@ -124,12 +132,12 @@
             </div>
           </div>
         </a>
-        <a href="#" >
+        <a href="#">
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
                 <div class="col-xs-2 izquierda">
-                  
+
                 </div>
                 <div class="col-xs-8 texto">
                   <span>Hogar</span>
@@ -138,12 +146,12 @@
             </div>
           </div>
         </a>
-        <a href="#" >
+        <a href="#">
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
                 <div class="col-xs-2 izquierda">
-                  
+
                 </div>
                 <div class="col-xs-8 texto">
                   <span>Exclusivos</span>
@@ -152,12 +160,12 @@
             </div>
           </div>
         </a>
-        <a href="#" >
+        <a href="#">
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
                 <div class="col-xs-2 izquierda">
-                  
+
                 </div>
                 <div class="col-xs-8 texto">
                   <span>Beneficios Claro Club</span>
@@ -242,84 +250,84 @@
         </a>
       </div>
     </div>
+    <!-- #endregion -->
 
+    <!-- #region tercer nivel-->
+    <div class="tercer-nivel">
+      <div class="tercer-menu movil">
+        <a href="#" class="regresar-tercero" menu="servicios">
+          <div class="boton-tercer">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-2 izquierda">
+                  <i class="fa fa-chevron-left"></i>
+                </div>
+                <div class="col-xs-8 texto principal">
+                  <span>Movil</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="boton-tercer">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-2 izquierda">
 
-<div class="tercer-nivel">
-  <div class="tercer-menu servicios">
-    <a href="#" class="regresar-derecha" menu="servicios">
-      <div class="boton-tercer">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-2 izquierda">
-              <i class="fa fa-chevron-left"></i>
-            </div>
-            <div class="col-xs-8 texto principal">
-              <span>Servicios</span>
+                </div>
+                <div class="col-xs-8 texto">
+                  <span>Movil</span>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-    </a>
-    <a href="#" >
-      <div class="boton-tercer">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-2 izquierda">
-              
-            </div>
-            <div class="col-xs-8 texto">
-              <span>Movil</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a href="#" >
-      <div class="boton-tercer">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-2 izquierda">
-              
-            </div>
-            <div class="col-xs-8 texto">
-              <span>Hogar</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a href="#" >
-      <div class="boton-tercer">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-2 izquierda">
-              
-            </div>
-            <div class="col-xs-8 texto">
-              <span>Exclusivos</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a href="#" >
-      <div class="boton-tercer">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-2 izquierda">
-              
-            </div>
-            <div class="col-xs-8 texto">
-              <span>Beneficios Claro Club</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-</div>
+        </a>
+        <a href="#">
+          <div class="boton-tercer">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-2 izquierda">
 
+                </div>
+                <div class="col-xs-8 texto">
+                  <span>Hogar</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="boton-tercer">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-2 izquierda">
 
+                </div>
+                <div class="col-xs-8 texto">
+                  <span>Exclusivos</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="boton-tercer">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-2 izquierda">
+
+                </div>
+                <div class="col-xs-8 texto">
+                  <span>Beneficios Claro Club</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <!-- #endregion -->
 
 
   </div>
