--- a/src/app/menupersonas/menupersonas.component.html
+++ b/src/app/menupersonas/menupersonas.component.html
@@ -171,7 +171,7 @@
 
                 </div>
                 <div class="col-xs-8 texto">
-                  <span>Claro Club</span>
+                  <span>Beneficios Claro Club</span>
                 </div>
               </div>
             </div>
@@ -661,7 +661,7 @@
                   <i class="fa fa-chevron-left"></i>
                 </div>
                 <div class="col-xs-8 texto principal">
-                  <span>Claro Club</span>
+                  <span>Beneficios Claro Club</span>
                 </div>
               </div>
             </div>
