--- a/src/app/pagina/pagina.component.html
+++ b/src/app/pagina/pagina.component.html
@@ -32,5 +32,12 @@
   </p>
 
   
+<div style="height:57px;background:green;color:white;">
+<p style="font-size:57px">
+  Claro Club
+</p>
+
+</div>
+
 
 </div>
