ingresados urls y ajuste en clicks en menu

--- a/src/app/menupersonas/menupersonas.component.css
+++ b/src/app/menupersonas/menupersonas.component.css
@@ -237,7 +237,7 @@ a.desplegar {
     text-align: center;
     font-size: 20px;
     color: #000000;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .boton-segundo i {
@@ -362,7 +362,7 @@ a.desplegar {
     text-align: center;
     font-size: 20px;
     color: #000000;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .boton-tercer i {
