--- a/src/app/menupersonas/menupersonas.component.html
+++ b/src/app/menupersonas/menupersonas.component.html
@@ -392,7 +392,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/movil/postpago/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -406,7 +406,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/movil/prepago/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -420,7 +420,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/movil/internet-movil/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -434,7 +434,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://recarga.claro.com.pe">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -448,7 +448,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://roaming.claro.com.pe">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -462,7 +462,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/portabilidad/?tab=portabilidadmovil">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -493,7 +493,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/hogar/internet/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -507,7 +507,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/hogar/telefonia/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -521,7 +521,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/hogar/tv/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -535,7 +535,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/paquetes-hogar/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -549,7 +549,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://cobertura.claro.com.pe/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -563,7 +563,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/portabilidad/?tab=portabilidadfija">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -594,7 +594,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/exclusivos/claro-musica/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -608,7 +608,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/exclusivos/claro-video/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -622,7 +622,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/exclusivos/mi-claro/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -636,7 +636,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/exclusivos/mi-internet-claro/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -667,7 +667,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/claro-club/que-es/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -681,7 +681,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="#http://cuponera.claro.com.pe/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -695,7 +695,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/claro-club/puntos-claro-club/catalogo-de-premios/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -709,7 +709,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/personas/claro-club/latam/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -742,7 +742,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://catalogo.claro.com.pe/catalogo/personas/portabilidad/acuerdo-18/celulares/precios-online/todos">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -756,7 +756,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://catalogo.claro.com.pe/catalogo/personas/renovacion/acuerdo-18/celulares/smartphones/todos">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -770,7 +770,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://catalogo.claro.com.pe/catalogo/personas/linea-nueva/acuerdo-18/celulares/smartphones/todos">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -784,7 +784,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://catalogo.claro.com.pe/catalogo/personas/portabilidad/cuotas-18/celulares/smartphones/todos">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -815,7 +815,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="https://tienda.claro.com.pe/tienda/es/claro/celulares-tiendaclaro-celulares-claro-v/todos-tiendaclaro-celulares-todos-v--24/preciosonline-tiendaclaro-celulares-todos-nuevos-v--24">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -829,7 +829,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="#https://tienda.claro.com.pe/tienda/es/claro/celulares-tiendaclaro-celulares-claro-v/todos-tiendaclaro-celulares-todos-v--24/smartphones-tiendaclaro-celulares-todos-smartphones-v--24">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -843,7 +843,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="https://tienda.claro.com.pe/tienda/es/claro/celulares-tiendaclaro-celulares-claro-v/todos-tiendaclaro-celulares-todos-v--24/econ%C3%B3micos-tiendaclaro-celulares-todos-economicos-v--24">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -874,7 +874,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://catalogo.claro.com.pe/recargas/recargas-online-claro.php">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -888,7 +888,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://recarga.claro.com.pe/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -919,7 +919,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="https://tienda.claro.com.pe/tienda/es/claro/celulares-tiendaclaro-accesorios-v/todos-tiendaclaro-accesorios-todos-v--24/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -933,7 +933,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="https://tienda.claro.com.pe/tienda/es/claro/celulares-tiendaclaro-accesorios-v/todos-tiendaclaro-accesorios-todos-v--24/accesorios-m%C3%B3viles-tiendaclaro-accesorios-todos-moviles-v--24">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -947,7 +947,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="https://tienda.claro.com.pe/tienda/es/claro/celulares-tiendaclaro-accesorios-v/todos-tiendaclaro-accesorios-todos-v--24/accesorios-m%C3%B3viles-tiendaclaro-accesorios-todos-moviles-v--24">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -961,7 +961,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="https://tienda.claro.com.pe/tienda/es/claro/celulares-tiendaclaro-accesorios-v/todos-tiendaclaro-accesorios-todos-v--24/accesorios-fijos-tiendaclaro-accesorios-todos-fijos-v--24">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -996,7 +996,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://asistencia.claro.com.pe/servicios-moviles/lo-que-debes-saber/como-consulto-mi-saldo">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1010,7 +1010,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://asistencia.claro.com.pe/servicios-moviles/como-evitar-el-consumo-indeseado-de-internet-en-mi-celular">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1024,7 +1024,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://asistencia.claro.com.pe/servicios-moviles/postpago/claro-max/que-es-el-limite-de-consumo">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1038,7 +1038,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/desbloquea-tu-equipo/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1052,7 +1052,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/consulta-de-lineas/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1066,7 +1066,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://asistencia.claro.com.pe/guias/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1097,7 +1097,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://asistencia.claro.com.pe/servicios-fijos/internet-fijo/como-funciona-y-como-instalo-el-antivirus-de-mi-internet-fijo">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1111,7 +1111,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://asistencia.claro.com.pe/facturacion/pago-de-servicios">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1125,7 +1125,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://asistencia.claro.com.pe/servicios-fijos/tv/como-creo-una-cuenta-de-control-parental">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1139,7 +1139,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://asistencia.claro.com.pe/facturacion/aprende-mas-sobre-tu-recibo/que-es-el-servicio-de-recibo-por-email">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1156,7 +1156,7 @@
       </div>
 
       <div class="tercer-menu comunidadclaro">
-        <a href="#" class="regresar-tercero" menu="ayuda">
+        <a href="http://comunidad.claro.com.pe/t5/Movil/ct-p/MOVIL" class="regresar-tercero" menu="ayuda">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1170,7 +1170,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://comunidad.claro.com.pe/t5/Movil/ct-p/MOVIL">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1184,7 +1184,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://comunidad.claro.com.pe/t5/Hogar/ct-p/hogar">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1198,7 +1198,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://comunidad.claro.com.pe/t5/Recibos/ct-p/Recibos-Facturas">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1212,7 +1212,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="http://comunidad.claro.com.pe/t5/Auto-Atencion/ct-p/Canales">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1243,7 +1243,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/contactanos/?tab=chat">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1257,7 +1257,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/contactanos/?tab=ubicanos">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1271,7 +1271,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/contactanos/?tab=telefonos">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
@@ -1285,7 +1285,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/wps/portal/pe/contactanos/?tab=cajeros">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
