implementado menu negocios

--- a/src/app/contenedor/contenedor.component.html
+++ b/src/app/contenedor/contenedor.component.html
@@ -1,2 +1,6 @@
-<app-menupersonas></app-menupersonas>
+<router-outlet></router-outlet>
+<!-- 
+    <app-menupersonas></app-menupersonas>
+    <app-negociomenu></app-negociomenu>
+-->
 <app-pagina></app-pagina>
