--- a/src/app/menupersonas/menupersonas.component.html
+++ b/src/app/menupersonas/menupersonas.component.html
@@ -340,7 +340,7 @@
             </div>
           </div>
         </a>
-        <a href="negociomenu">
+        <a href="/negocios">
           <div class="boton-segundo segundo">
             <div class="container">
               <div class="row">
@@ -354,7 +354,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="/empresas">
           <div class="boton-segundo tercero">
             <div class="container">
               <div class="row">
