corregido errror de #

--- a/src/app/menupersonas/menupersonas.component.html
+++ b/src/app/menupersonas/menupersonas.component.html
@@ -681,7 +681,7 @@
             </div>
           </div>
         </a>
-        <a href="#http://cuponera.claro.com.pe/">
+        <a href="http://cuponera.claro.com.pe/">
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
