corregido url en empresas

--- a/src/app/empresamenu/empresamenu.component.html
+++ b/src/app/empresamenu/empresamenu.component.html
@@ -306,7 +306,7 @@
                   <i class="fa fa-chevron-left"></i>
                 </div>
                 <div class="col-xs-8 texto">
-                  <span>Negocios</span>
+                  <span>Empresas</span>
                 </div>
               </div>
             </div>
@@ -326,7 +326,7 @@
             </div>
           </div>
         </a>
-        <a href="/empresas">
+        <a href="/negocios">
           <div class="boton-segundo tercero">
             <div class="container">
               <div class="row">
@@ -334,7 +334,7 @@
 
                 </div>
                 <div class="col-xs-8 texto">
-                  <span>Empresas</span>
+                  <span>Negocios</span>
                 </div>
               </div>
             </div>
